# bevy_shape_transition

./: Cargo.toml  README.md
assets/: shader.wgsl
examples/: left_right.rs  party.rs
src/: events.rs  lib.rs  shader.rs
